--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "jQuery": "^1.7.4",
+    "jquery": "^3.6.0",
     "webextension-polyfill-ts": "^0.25.0"
   },
   "devDependencies": {
